--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    # Runs a single command using the runners shell
     - name: Get tag
       id: get_tag
       run: echo ::set-output name=VERSION::${GITHUB_REF/refs\/tags\//}
@@ -22,7 +21,7 @@ jobs:
       id: create_release
       uses: actions/create-release@latest
       env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         tag_name: ${{ github.ref }}
         release_name: ${{ github.ref }}
@@ -30,12 +29,12 @@ jobs:
         draft: false
         prerelease: false
     - name: Upload linux amd64
-       id: upload_linux_amd64
+      id: upload_linux_amd64
       uses: actions/upload-release-asset@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-       with:
-         upload_url: ${{ steps.create_release.outputs.upload_url }} 
-         asset_path: ./terraform-provider-git-${{ github.ref }}
-         asset_name: terraform-provider-git-${{ github.ref }}
-         asset_content_type: application/octet-stream
+      with:
+        upload_url: ${{ steps.create_release.outputs.upload_url }} 
+        asset_path: ./terraform-provider-git-${{ github.ref }}
+        asset_name: terraform-provider-git-${{ github.ref }}
+        asset_content_type: application/octet-stream
