--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
       id: get_tag
       run: echo ::set-output name=VERSION::${GITHUB_REF/refs\/tags\//}
     - name: Build linux amd64
-      run: GOOS=linux GOARCH=amd64 go build -o terraform-provider-git-${{ steps.get_version.outputs.VERSION }}
+      run: 'GOOS=linux GOARCH=amd64 go build -o terraform-provider-git-${{ steps.get_version.outputs.VERSION }} src/*'
     - name: Create Release
       id: create_release
       uses: actions/create-release@latest
