--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,8 +15,9 @@ jobs:
       run: echo ::set-output name=VERSION::${GITHUB_REF/refs\/heads\//}
     - name: Build linux amd64
       id: build_exe
+      env:
+        EXE_NAME: terraform-provider-git-${{ steps.get_version.outputs.VERSION }}
       run: |
-        export EXE_NAME=terraform-provider-git-${{ steps.get_version.outputs.VERSION }}
         GOOS=linux GOARCH=amd64 go build -o "$EXE_NAME" src/*
         echo ::set-output name=exe_name::"$EXE_NAME"
     - name: Create Release
