--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,12 +14,13 @@ jobs:
       id: get_branch
       run: |
         echo "${GITHUB_REF/refs\/heads\//}"
-        echo ::set-output name=VERSION::"${GITHUB_REF/refs\/heads\//}"
+        echo ::set-output name=version::"${GITHUB_REF/refs\/heads\//}"
     - name: Build linux amd64
       id: build_exe
       env:
-        EXE_NAME: terraform-provider-git-${{ steps.get_version.outputs.VERSION }}
+        EXE_NAME: terraform-provider-git-${{ steps.get_version.outputs.version }}
       run: |
+        echo "$EXE_NAME"
         GOOS=linux GOARCH=amd64 go build -o "$EXE_NAME" src/*
         echo ::set-output name=exe_name::"$EXE_NAME"
     - name: Create Release
